--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-27 01:57+0100\n"
+"POT-Creation-Date: 2022-11-27 02:26+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -282,6 +282,7 @@ msgid "View all photos"
 msgstr "Voir toutes les photos"
 
 #: templates/administration/base.html:235 templates/homepage/base.html:69
+#: templates/portfolio/index_portfolio.html:4
 msgid "Portfolio"
 msgstr "Portfolio"
 
@@ -613,6 +614,10 @@ msgstr "Passion"
 msgid "Travels"
 msgstr "Voyages"
 
+#: templates/portfolio/index_portfolio.html:13
+msgid "All"
+msgstr "Tous"
+
 #: templates/static_pages_and_forms/contact.html:3
 #, fuzzy
 #| msgid "Contact Us"
@@ -644,8 +649,8 @@ msgid ""
 msgstr ""
 "\n"
 "                                Ils disent qu'une photo vaut mille mots.\n"
-"                                Mais je me demande ce que disent "
-" “les autres”.\n"
+"                                Mais je me demande ce que disent  “les "
+"autres”.\n"
 "                                En photographie, il y a une réalité si "
 "sensible qu'elle devient plus réelle que la réalité.\n"
 "                                Prendre une image révèle à quel point la "
@@ -672,7 +677,8 @@ msgstr "Merci pour votre demande"
 
 #: templates/static_pages_and_forms/success.html:67
 msgid "Your contact information and message was successfully submitted."
-msgstr "Vos informations de contact et votre message ont été envoyés avec succès."
+msgstr ""
+"Vos informations de contact et votre message ont été envoyés avec succès."
 
 #: templates/static_pages_and_forms/success.html:70
 msgid "Wanna book me"
