--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-27 02:33+0100\n"
+"POT-Creation-Date: 2022-11-27 03:21+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,11 +58,67 @@ msgstr "Email déjà envoyé"
 msgid "Session request does not exist"
 msgstr "La demande de reservation n'existe pas"
 
-#: client/form.py:36
+#: client/form.py:10
+msgid "--- Select a package ---"
+msgstr "--- Sélectionnez un forfait ---"
+
+#: client/form.py:11 client/models.py:243
+msgid "7 photos"
+msgstr "7 photos"
+
+#: client/form.py:12 client/models.py:245
+msgid "15 photos"
+msgstr "15 photos"
+
+#: client/form.py:13
+msgid "30 photos + mini video"
+msgstr "30 photos + mini vidéo"
+
+#: client/form.py:14 client/models.py:241
+msgid "3 photos"
+msgstr "3 photos"
+
+#: client/form.py:17
+msgid "--- Select a session type ---"
+msgstr "--- Sélectionnez un type de séance ---"
+
+#: client/form.py:18
+msgid "Portrait"
+msgstr "Portrait"
+
+#: client/form.py:19
+msgid "Birthday"
+msgstr "Anniversaire"
+
+#: client/form.py:20
+msgid "Wedding and other events"
+msgstr "Mariage et autres événements"
+
+#: client/form.py:23
+msgid "--- Select a location ---"
+msgstr "--- Sélectionnez un lieu ---"
+
+#: client/form.py:24
+msgid "Studio"
+msgstr "Studio"
+
+#: client/form.py:25
+msgid "Outdoor"
+msgstr "Extérieur"
+
+#: client/form.py:26
+msgid "Orlando"
+msgstr "Orlando"
+
+#: client/form.py:27
+msgid "Others"
+msgstr "Autres"
+
+#: client/form.py:38
 msgid "Full Name"
 msgstr "Nom complet"
 
-#: client/form.py:37 templates/administration/list/list_contact_forms.html:26
+#: client/form.py:39 templates/administration/list/list_contact_forms.html:26
 #: templates/administration/list/list_contact_forms.html:59
 #: templates/administration/list/list_requested_session.html:41
 #: templates/administration/list/list_requested_session.html:117
@@ -73,31 +129,54 @@ msgstr "Nom complet"
 msgid "Email"
 msgstr "Courriel"
 
-#: client/form.py:39
+#: client/form.py:41 templates/client/booking_and_promotions/bookme.html:156
 msgid "Type of photo session"
 msgstr "Type de séance photo"
 
-#: client/form.py:40
+#: client/form.py:42 templates/client/booking_and_promotions/bookme.html:161
 msgid "Location"
 msgstr "Lieu"
 
-#: client/form.py:41
+#: client/form.py:43
 #: templates/administration/list/list_requested_session.html:45
 #: templates/administration/list/list_requested_session.html:121
 msgid "Package"
 msgstr "Pack"
 
-#: client/form.py:42
+#: client/form.py:44
 msgid "Desired Date"
 msgstr "Date souhaitée"
 
-#: client/form.py:43
+#: client/form.py:45
 #: templates/administration/list/list_requested_session.html:43
 #: templates/administration/list/list_requested_session.html:119
 #: templates/administration/view/index.html:185
 #: templates/administration/view/index.html:256
 msgid "Address"
 msgstr "Adresse"
+
+#: client/form.py:53 templates/administration/list/list_contact_forms.html:25
+#: templates/administration/list/list_contact_forms.html:58
+#: templates/client/booking_and_promotions/bookme.html:135
+msgid "Full name"
+msgstr "Nom complet"
+
+#: client/form.py:58 static_pages_and_forms/form.py:26
+msgid "A valid email address, please... !"
+msgstr "Une adresse email valide, s'il vous plaît...!"
+
+#: client/form.py:65
+msgid "No spaces, letters or special characters, only 10 digits..."
+msgstr ""
+"Pas d'espaces, de lettres ou de caractères spéciaux, seulement 10 chiffres..."
+
+#: client/form.py:88 client/models.py:146
+msgid "Does not have to be specific, just the city and the state"
+msgstr "Pas besoin d'être spécifique, juste la ville et l'état"
+
+#: client/form.py:96
+msgid "Sorry, we only offer this package in Orlando"
+msgstr "Désolé, nous offrons seulement ce forfait à Orlando"
 
 #: client/models.py:19 client/models.py:142
 msgid ""
@@ -118,10 +197,6 @@ msgstr "Un utilisateur doit avoir un prénom"
 #: client/models.py:51 client/models.py:138
 msgid "A valid email address, please"
 msgstr "Une adresse email valide, s'il vous plaît"
-
-#: client/models.py:146
-msgid "Does not have to be specific, just the city and the state"
-msgstr "Pas besoin d'être spécifique, juste la ville et l'état"
 
 #: client/models.py:148 client/models.py:149 client/models.py:196
 msgid "pending"
@@ -152,21 +227,17 @@ msgstr "Votre demande de réservation a changé de statut !"
 msgid "No data"
 msgstr "Pas de données"
 
-#: client/models.py:241
-msgid "3 photos"
-msgstr "3 photos"
-
-#: client/models.py:243
-msgid "7 photos"
-msgstr "7 photos"
-
-#: client/models.py:245
-msgid "15 photos"
-msgstr "15 photos"
-
 #: client/models.py:247
 msgid "30 photos"
 msgstr "30 photos"
+
+#: client/views.py:285
+msgid ""
+"Thank you, your booking has been registered successfully, you will receive "
+"an email shortly!"
+msgstr ""
+"Merci, votre réservation a été enregistrée avec succès, vous recevrez un "
+"courriel sous peu !"
 
 #: crueltouch/settings.py:196
 msgid "English"
@@ -183,10 +254,6 @@ msgstr "Français"
 #: static_pages_and_forms/form.py:19
 msgid "How do I call you ?"
 msgstr "Comment puis-je vous appeler ?"
-
-#: static_pages_and_forms/form.py:26
-msgid "A valid email address, please... !"
-msgstr "Une adresse email valide, s'il vous plaît...!"
 
 #: static_pages_and_forms/form.py:32
 msgid "What is the subject of your message... ?"
@@ -327,11 +394,6 @@ msgstr "Mise à jour"
 msgid "Contact Forms"
 msgstr "Formulaires de contact"
 
-#: templates/administration/list/list_contact_forms.html:25
-#: templates/administration/list/list_contact_forms.html:58
-msgid "Full name"
-msgstr "Nom complet"
-
 #: templates/administration/list/list_contact_forms.html:27
 #: templates/administration/list/list_contact_forms.html:60
 msgid "Subject"
@@ -378,6 +440,7 @@ msgstr "Date prise"
 #: templates/administration/list/list_requested_session.html:115
 #: templates/administration/view/index.html:181
 #: templates/administration/view/index.html:252
+#: templates/client/booking_and_promotions/bookme.html:147
 msgid "Desired date"
 msgstr "Date souhaitée"
 
@@ -470,9 +533,67 @@ msgstr "Photos livrées"
 msgid "Clients"
 msgstr "Clients"
 
-#: templates/client/booking_and_promotions/bookme.html:158
+#: templates/client/booking_and_promotions/bookme.html:4
+msgid "Book me"
+msgstr "Me réserver"
+
+#: templates/client/booking_and_promotions/bookme.html:113
+msgid "Note"
+msgstr "Note"
+
+#: templates/client/booking_and_promotions/bookme.html:115
+msgid "The price vary according to"
+msgstr "Le prix varie selon"
+
+#: templates/client/booking_and_promotions/bookme.html:118
+msgid "The place you want to do the photoshoot"
+msgstr "Le lieu où vous voulez faire le photoshoot"
+
+#: templates/client/booking_and_promotions/bookme.html:119
+msgid "The session type"
+msgstr "Le type de session"
+
+#: templates/client/booking_and_promotions/bookme.html:120
+msgid "The number of pictures you want (the packages)"
+msgstr "Le nombre de photos que vous voulez (les packages)"
+
+#: templates/client/booking_and_promotions/bookme.html:123
+msgid ""
+"In order to have a better user experience, we recommend you to register first"
+msgstr ""
+"Pour une meilleure expérience utilisateur, nous vous recommandons de vous "
+"inscrire d'abord"
+
+#: templates/client/booking_and_promotions/bookme.html:126
+msgid ""
+"NB: A $100 deposit is required to book the date. No deposit, no obligation"
+msgstr ""
+"NB: Un dépôt de 100$ est requis pour réserver la date. Pas de dépôt, pas "
+"d'obligation"
+
+#: templates/client/booking_and_promotions/bookme.html:139
+msgid "Email address"
+msgstr "Adresse email"
+
+#: templates/client/booking_and_promotions/bookme.html:143
+msgid "Phone number"
+msgstr "Téléphone"
+
+#: templates/client/booking_and_promotions/bookme.html:151
 msgid "City and State"
 msgstr "Ville et état"
+
+#: templates/client/booking_and_promotions/bookme.html:166
+msgid "Select a package"
+msgstr "Sélectionnez un forfait"
+
+#: templates/client/booking_and_promotions/bookme.html:171
+msgid "required"
+msgstr "requis"
+
+#: templates/client/booking_and_promotions/bookme.html:180
+msgid "Request"
+msgstr "Demande"
 
 #: templates/homepage/base.html:9
 msgid "CRUELTOUCH"
