--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-27 03:21+0100\n"
+"POT-Creation-Date: 2022-11-27 04:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -129,15 +129,16 @@ msgstr "Nombre completo"
 msgid "Email"
 msgstr "Correo electrónico"
 
-#: client/form.py:41 templates/client/booking_and_promotions/bookme.html:156
+#: client/form.py:41 templates/client/booking_and_promotions/bookme.html:157
 msgid "Type of photo session"
 msgstr "Tipo de sesión fotográfica"
 
-#: client/form.py:42 templates/client/booking_and_promotions/bookme.html:161
+#: client/form.py:42 templates/client/booking_and_promotions/bookme.html:162
 msgid "Location"
 msgstr "Ubicación"
 
 #: client/form.py:43
+#: templates/administration/email_template/session_request_received.html:195
 #: templates/administration/list/list_requested_session.html:45
 #: templates/administration/list/list_requested_session.html:121
 msgid "Package"
@@ -157,7 +158,7 @@ msgstr "Dirección"
 
 #: client/form.py:53 templates/administration/list/list_contact_forms.html:25
 #: templates/administration/list/list_contact_forms.html:58
-#: templates/client/booking_and_promotions/bookme.html:135
+#: templates/client/booking_and_promotions/bookme.html:136
 msgid "Full name"
 msgstr "Nombre completo"
 
@@ -173,7 +174,11 @@ msgstr "Sin espacios, letras o caracteres especiales, solo 10 dígitos..."
 msgid "Does not have to be specific, just the city and the state"
 msgstr "No tiene que ser específico, solo la ciudad y el estado"
 
-#: client/form.py:96
+#: client/form.py:97
+msgid "Fill in all the fields"
+msgstr "Rellene todos los campos"
+
+#: client/form.py:99
 msgid "Sorry, we only offer this package in Orlando"
 msgstr "Lo sentimos, solo ofrecemos este paquete en Orlando"
 
@@ -229,6 +234,10 @@ msgstr "Sin datos"
 #: client/models.py:247
 msgid "30 photos"
 msgstr "30 fotos"
+
+#: client/models.py:289
+msgid "Contact us for more information"
+msgstr "Contáctenos para más información"
 
 #: client/views.py:285
 msgid ""
@@ -387,6 +396,106 @@ msgstr "Actualizar sesión solicitada"
 msgid "Update"
 msgstr "Actualizar"
 
+#: templates/administration/email_template/session_request_received.html:76
+msgid ""
+"\n"
+"        Hi %(full_name)s, the crueltouch team is pleased to announce that "
+"your reservation has been processed.\n"
+"    "
+msgstr ""
+"\n"
+"        Hola %(full_name)s, el equipo de crueltouch se complace en anunciar "
+"que su reserva ha sido procesada.\n"
+"    "
+
+#: templates/administration/email_template/session_request_received.html:141
+msgid "Thank you for booking Crueltouch!"
+msgstr "¡Gracias por reservar Crueltouch!"
+
+#: templates/administration/email_template/session_request_received.html:149
+#, python-format
+msgid ""
+"\n"
+"                                            Hi %(full_name)s, the crueltouch "
+"team is pleased to announce that your\n"
+"                                            reservation has been "
+"successfully submitted. We will do our best to process\n"
+"                                            it. You will receive an email "
+"shortly with the next steps.\n"
+"                                        "
+msgstr ""
+"\n"
+"                                            Hola %(full_name)s, el equipo de "
+"crueltouch se complace en anunciar que su\n"
+"                                            reserva ha sido enviada "
+"exitosamente. Haremos todo lo posible para procesarla.\n"
+"                                            Recibirá un correo electrónico "
+"pronto con los próximos pasos.\n"
+"                                        "
+
+#: templates/administration/email_template/session_request_received.html:156
+#: templates/client/booking_and_promotions/bookme.html:127
+msgid ""
+"NB: A $100 deposit is required to book the date. No deposit, no obligation"
+msgstr ""
+"N.B.: Se requiere un depósito de $ 100 para reservar la fecha. Sin depósito, "
+"sin obligación"
+
+#: templates/administration/email_template/session_request_received.html:166
+msgid "Booking Confirmation"
+msgstr "Confirmación de reserva"
+
+#: templates/administration/email_template/session_request_received.html:175
+msgid "Session type"
+msgstr "Tipo de sesión"
+
+#: templates/administration/email_template/session_request_received.html:185
+#: templates/administration/list/list_requested_session.html:46
+#: templates/administration/list/list_requested_session.html:122
+msgid "Place"
+msgstr "Lugar"
+
+#: templates/administration/email_template/session_request_received.html:205
+#: templates/administration/list/list_requested_session.html:47
+#: templates/administration/list/list_requested_session.html:123
+#: templates/administration/view/index.html:186
+#: templates/administration/view/index.html:257
+msgid "Status"
+msgstr "Estado"
+
+#: templates/administration/email_template/session_request_received.html:221
+msgid "ESTIMATED COST"
+msgstr "COSTO ESTIMADO"
+
+#: templates/administration/email_template/session_request_received.html:261
+msgid "Estimated Response Date"
+msgstr "Fecha estimada de respuesta"
+
+#: templates/administration/email_template/session_request_received.html:295
+msgid "See my latest works"
+msgstr "Mira mis últimos trabajos"
+
+#: templates/administration/email_template/session_request_received.html:305
+msgid "Awesome"
+msgstr "Increíble"
+
+#: templates/administration/email_template/session_request_received.html:346
+msgid "If you don't want to receive any more email from us"
+msgstr "Si no desea recibir más correos electrónicos de nosotros"
+
+#: templates/administration/email_template/session_request_received.html:348
+msgid "please let us know"
+msgstr "por favor háganoslo saber"
+
+#: templates/administration/email_template/session_request_received.html:392
+#: templates/homepage/base.html:147
+msgid "All rights reserved"
+msgstr "Todos los derechos reservados"
+
+#: templates/administration/email_template/session_request_received.html:394
+msgid "Made with love by"
+msgstr "Hecho con amor por"
+
 #: templates/administration/list/list_contact_forms.html:4
 #: templates/administration/list/list_contact_forms.html:7
 #: templates/administration/list/list_contact_forms.html:10
@@ -440,7 +549,7 @@ msgstr "Fecha tomada"
 #: templates/administration/list/list_requested_session.html:115
 #: templates/administration/view/index.html:181
 #: templates/administration/view/index.html:252
-#: templates/client/booking_and_promotions/bookme.html:147
+#: templates/client/booking_and_promotions/bookme.html:148
 msgid "Desired date"
 msgstr "Fecha deseada"
 
@@ -462,18 +571,6 @@ msgstr "Teléfono"
 #: templates/administration/list/list_requested_session.html:120
 msgid "Type"
 msgstr "Tipo"
-
-#: templates/administration/list/list_requested_session.html:46
-#: templates/administration/list/list_requested_session.html:122
-msgid "Place"
-msgstr "Lugar"
-
-#: templates/administration/list/list_requested_session.html:47
-#: templates/administration/list/list_requested_session.html:123
-#: templates/administration/view/index.html:186
-#: templates/administration/view/index.html:257
-msgid "Status"
-msgstr "Estado"
 
 #: templates/administration/list/list_requested_session.html:48
 #: templates/administration/list/list_requested_session.html:124
@@ -561,35 +658,29 @@ msgstr "El número de fotos que desea (los paquetes)"
 msgid ""
 "In order to have a better user experience, we recommend you to register first"
 msgstr ""
-"Para tener una mejor experiencia de usuario, le recomendamos que se registre "
+"Para tener una mejor experiencia de usuario, le recomendamos que se registre"
 
-#: templates/client/booking_and_promotions/bookme.html:126
-msgid ""
-"NB: A $100 deposit is required to book the date. No deposit, no obligation"
-msgstr ""
-"N.B.: Se requiere un depósito de $ 100 para reservar la fecha. Sin depósito, "
-
-#: templates/client/booking_and_promotions/bookme.html:139
+#: templates/client/booking_and_promotions/bookme.html:140
 msgid "Email address"
 msgstr "Dirección de correo electrónico"
 
-#: templates/client/booking_and_promotions/bookme.html:143
+#: templates/client/booking_and_promotions/bookme.html:144
 msgid "Phone number"
 msgstr "Teléfono"
 
-#: templates/client/booking_and_promotions/bookme.html:151
+#: templates/client/booking_and_promotions/bookme.html:152
 msgid "City and State"
 msgstr "Ciudad y estado"
 
-#: templates/client/booking_and_promotions/bookme.html:166
+#: templates/client/booking_and_promotions/bookme.html:167
 msgid "Select a package"
 msgstr "Seleccione un paquete"
 
-#: templates/client/booking_and_promotions/bookme.html:171
+#: templates/client/booking_and_promotions/bookme.html:172
 msgid "required"
 msgstr "requerido"
 
-#: templates/client/booking_and_promotions/bookme.html:180
+#: templates/client/booking_and_promotions/bookme.html:181
 msgid "Request"
 msgstr "Solicitar"
 
@@ -640,10 +731,6 @@ msgstr "Registro"
 #: templates/homepage/base.html:87
 msgid "Admin Login"
 msgstr "Acceso administrador"
-
-#: templates/homepage/base.html:147
-msgid "All rights reserved"
-msgstr "Todos los derechos reservados"
 
 #: templates/homepage/base.html:147
 msgid "Made with"
